--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -33,7 +33,7 @@ jobs:
         if: steps.build.outputs.skip != 'true'
         run: |
           sha256sum geoip.db > geoip.db.sha256sum
-          sha256sum geoip-cn.db > geoip-cn.db.sha256sum
+          sha256sum geoip-truncated.db > geoip-truncated.db.sha256sum
       - name: Release release branch
         if: steps.build.outputs.skip != 'true'
         run: .github/release-branch.sh
@@ -52,5 +52,5 @@ jobs:
           files: |
             geoip.db
             geoip.db.sha256sum
-            geoip-cn.db
-            geoip-cn.db.sha256sum
+            geoip-truncated.db
+            geoip-truncated.db.sha256sum
